# noriapay

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/noriapay/: __init__.py  http.py  mpesa.py  oauth.py  paystack.py  sasapay.py  types.py
tests/: test_config_webhooks.py  test_internal.py  test_live_sandbox.py  test_noriapay.py  test_paystack.py
